--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -6,85 +6,61 @@
     <title>IA Admin 后台登录</title>
     <link rel="stylesheet" href="/static/admin/layui/css/layui.css">
     <link rel="stylesheet" href="/static/admin/admin.css?v={:time()}">
+    <link rel="stylesheet" href="/static/admin/font/iconfont.css?v={:time()}">
     <link rel="stylesheet" href="/static/admin/login.css?v={:time()}">
+    <link rel="stylesheet" href="/static/admin/util.css?v={:time()}">
 
 </head>
 <body>
-
-<div class="login-page">
-    <div class="form-container">
-        <div class="layui-row">
-
-            <div class="layui-col-md6">
-                <div class="overlay-background mx-auto rounded-left"></div>
+<div class="dowebok">
+    <div class="container-login">
+        <div class="wrap-login">
+            <div class="login-pic js-tilt" data-tilt="">
+                <img src="/static/admin/images/login-img.png" alt="img">
             </div>
 
+            <form class="login-form validate-form layui-form">
+					<span class="login-form-title">
+						会员登陆
+					</span>
 
-            <div class="layui-col-md6">
-                <div class="form">
-                    <form class="sign-in-form">
-                            <div class="">
-                                <a class="logo-link" href="https://www.17sucai.com/preview/2413762/2021-12-02/denglu%20mb/%E2%95%A1%E2%95%9F%E2%94%AC%E2%95%9D%E2%94%80%C3%BA%E2%96%91%CF%83/login5.html">
-                                    <img class="logo-image" alt="Logo" src="./Login Page _ Swish by ThemeLuxury_files/logo.png">
-                                </a>
-                            </div>
-                            <h3 class="text-main">
-                                <span class="text-neutral">登录管理后台</span>
-                            </h3>
-
-                            <div class="other-account-login">
-                                <button class="btn btn-sm btn-facebook mr-2 box-rounded" type="button"><i class="fab fa-facebook-square"></i></button>
-                                <button class="btn btn-sm btn-pinterest mr-2 box-rounded" type="button"><i class="fab fa-pinterest"></i></button>
-                                <button class="btn btn-sm btn-twitter box-rounded" type="button"><i class="fab fa-twitter"></i></button>
-                            </div>
-
-                            <span class="text-main py-2">账号密码登录</span>
-
-                            <div class="form-group my-3">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text box-rounded-left"><i class="fas fa-envelope"></i></span>
-                                    </div>
-                                    <input class="layui-input" type="email" placeholder="账号" required="">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text box-rounded-left"><i class="fas fa-lock"></i></span>
-                                    </div>
-                                    <input class="layui-input" type="password" placeholder="密码" required="">
-                                </div>
-                            </div>
-
-
-                            <div class="form-row text-nowrap d-flex my-4">
-                                <div class="col d-flex align-items-center">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="formCheck">
-                                        <label class="form-check-label justify-content-lg-center align-items-lg-center" for="formCheck">Remember me</label>
-                                    </div>
-                                </div>
-                                <div class="col d-flex justify-content-end align-items-center">
-                                    <a class="text-neutral" href="https://www.17sucai.com/preview/2413762/2021-12-02/denglu%20mb/%E2%95%A1%E2%95%9F%E2%94%AC%E2%95%9D%E2%94%80%C3%BA%E2%96%91%CF%83/forgot-password5.html">Forgot your password?</a>
-                                </div>
-                            </div>
-
-                            <button class="btn btn-main shadow-sm btn-block box-rounded" type="submit">Sign in</button>
-                            <a class="mt-3 d-block font-weight-bold text-main" href="https://www.17sucai.com/preview/2413762/2021-12-02/denglu%20mb/%E2%95%A1%E2%95%9F%E2%94%AC%E2%95%9D%E2%94%80%C3%BA%E2%96%91%CF%83/register5.html">Create account</a>
-                        </form>
-
+                <div class="wrap-input validate-input">
+                    <input class="input layui-input"  type="text" name="email" placeholder="邮箱">
+                    <span class="symbol-input">
+                        <i class="layui-icon layui-icon-username" aria-hidden="true"></i>
+                    </span>
                 </div>
-            </div>
 
+                <div class="wrap-input validate-input">
+                    <input class="input layui-input login-form-pass-input" type="password" name="pass" placeholder="密码">
+                    <span class="symbol-input">
+                        <i class="layui-icon layui-icon-password" aria-hidden="true"></i>
+                        <i class="icon layui-icon layui-icon-extend-browse password-view-icon" aria-hidden="true"></i>
+                    </span>
+                </div>
+
+                <div class="container-login-form-btn">
+                    <button class="login-form-btn">
+                        登陆
+                    </button>
+                </div>
+
+                <div class="text-center p-t-12">
+<!--                    <a class="txt2" href="javascript:">-->
+<!--                        忘记密码？-->
+<!--                    </a>-->
+                </div>
+
+                <div class="text-center p-t-136">
+<!--                    <a class="txt2" href="https://www.helloweba.net/" target="_blank">-->
+<!--                        还没有账号？立即注册-->
+<!--                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>-->
+<!--                    </a>-->
+                </div>
+            </form>
         </div>
     </div>
 </div>
-
-
-
-
-
 
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
 <script src="static/admin/layui/layui.js"></script>
