--- a/public/static/admin/login.css
+++ b/public/static/admin/login.css
@@ -4,27 +4,6 @@
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
-
-@font-face {
-    font-family: Poppins-Regular;
-    src: url('../fonts/poppins/Poppins-Regular.ttf');
-}
-
-@font-face {
-    font-family: Poppins-Bold;
-    src: url('../fonts/poppins/Poppins-Bold.ttf');
-}
-
-@font-face {
-    font-family: Poppins-Medium;
-    src: url('../fonts/poppins/Poppins-Medium.ttf');
-}
-
-@font-face {
-    font-family: Montserrat-Bold;
-    src: url('../fonts/montserrat/Montserrat-Bold.ttf');
-}
-
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 
@@ -36,12 +15,10 @@
 
 body, html {
     height: 100%;
-    font-family: Poppins-Regular, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
@@ -229,13 +206,13 @@ iframe {
     font-size: 16px;
     line-height: 1.5;
     color: #666666;
-
     display: block;
     width: 100%;
     background: #e6e6e6;
     height: 50px;
     border-radius: 25px;
     padding: 3px 30px 0 60px;
+    letter-spacing: 1px;
 }
 
 
@@ -413,7 +390,6 @@ iframe {
     right: 8px;
     pointer-events: none;
 
-    font-family: Poppins-Medium;
     color: #c80000;
     font-size: 13px;
     line-height: 1.4;
