--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>IA Admin 后台登录</title>
     <link rel="stylesheet" href="/static/admin/layui/css/layui.css">
-    <link rel="stylesheet" href="/static/admin/admin.css?v={:time()}">
+    <link rel="stylesheet" href="/static/admin/css/admin.css?v={:time()}">
     <link rel="stylesheet" href="/static/admin/font/iconfont.css?v={:time()}">
-    <link rel="stylesheet" href="/static/admin/login.css?v={:time()}">
-    <link rel="stylesheet" href="/static/admin/util.css?v={:time()}">
+    <link rel="stylesheet" href="/static/admin/css/login.css?v={:time()}">
+    <link rel="stylesheet" href="/static/admin/css/util.css?v={:time()}">
 
 </head>
 <body>
