--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>layui-tdesign Admin</title>
     <link rel="stylesheet" href="static/admin/layui/css/layui.css">
-    <link rel="stylesheet" href="static/admin/admin.css?v={:time()}">
+    <link rel="stylesheet" href="static/admin/css/admin.css?v={:time()}">
 </head>
 <body>
 
