--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -211,7 +211,7 @@ iframe {
     background: #e6e6e6;
     height: 50px;
     border-radius: 25px;
-    padding: 3px 30px 0 60px;
+    padding: 0px 30px 0 60px;
     letter-spacing: 1px;
 }
 
@@ -441,7 +441,6 @@ iframe {
     right: 13px;
 }
 
-.login-form-pass-input{
+.login-form input.login-form-pass-input{
     letter-spacing: 5px;
-    font-size: 16px;
 }
