--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -900,7 +900,7 @@ div.layui-layer{
 }
 /*兼容pc缩进菜单 end*/
 
-.layui-layout-admin > .page-loading{
+ .page-loading{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -911,17 +911,22 @@ div.layui-layer{
     align-items: center;
 }
 
-.layui-layout-admin > .page-loading > .loading-icon{
+ .page-loading > .loading-icon{
     width: 50px;
     height: 50px;
     font-size: 18px;
     line-height: 50px;
     text-align: center;
 }
-.layui-layout-admin > .page-loading > .loading-icon i{
+.page-loading > .loading-icon i{
     font-size: 50px;
     padding: 0;
     color: var(--bg-color);
+}
+
+.btn-loading {
+    margin-left: 5px;
+    margin-top: -3px;
 }
 
 /* 资源管理器 */
