# 表单标题修改

--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -26,7 +26,7 @@
 
             <form class="login-form validate-form layui-form" >
 					<span class="login-form-title">
-						会员登陆
+						后台登录
 					</span>
 
                 <div class="wrap-input validate-input">
