--- a/view/admin/component/file_manage.html
+++ b/view/admin/component/file_manage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>layui-tdesign Admin</title>
     <link rel="stylesheet" href="/static/admin/layui/css/layui.css">
-    <link rel="stylesheet" href="/static/admin/admin.css">
+    <link rel="stylesheet" href="/static/admin/css/admin.css">
 </head>
 <body>
 <div style="padding: 18px 15px">
