--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -444,3 +444,16 @@ iframe {
 .login-form input.login-form-pass-input{
     letter-spacing: 5px;
 }
+
+span.pass-view{
+    width: 40px;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+span.pass-view i{
+    cursor: pointer;
+}
