--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -139,6 +139,20 @@
         // })
         page_loading.fadeOut(500);
         form.on('submit(login-submit)', function(data) {
+            let _this = $(this);
+
+            _this.attr("disabled","disabled")
+            _this.css("opacity","0.7")
+            _this.append('<i class="layui-icon layui-icon-loading layui-anim layui-anim-rotate layui-anim-loop btn-loading"></i>');
+            setTimeout(function () {
+                _this.children('i.btn-loading').remove()
+                _this.removeAttr('disabled')
+                _this.css("opacity","1")
+                page_loading.fadeIn(500);
+                setTimeout(function () {
+                    location.href = "/admin";
+                },1000)
+            },1500)
             // page_loading.fadeIn(500);
             // setTimeout(function () {
             //     location.href = "/admin";
