--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -47,6 +47,10 @@
 
                 </div>
 
+                <div class="wrap-input validate-input">
+                    <input class="input layui-input login-form-pass-input" type="text" name="verify" placeholder="验证码">
+                </div>
+
                 <div class="container-login-form-btn">
                     <button class="login-form-btn" type="submit" lay-submit lay-filter="login-submit" ia-event="loading">
                         登陆
