--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -457,3 +457,20 @@ span.pass-view{
 span.pass-view i{
     cursor: pointer;
 }
+span.verify_code{
+    position: absolute;
+    width: 50%;
+    /*height: 74px;*/
+    right: 1px;
+    border-radius: 50%;
+    top: 1px;
+    /*border-left: 1px solid red;*/
+    /*height: 100%;*/
+}
+
+span.verify_code > img{
+    max-width: 100%;
+    height: 48px;
+    border-radius: 0 50px 50px 0;
+    border-left: 1px solid red;
+}
