--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -25,38 +25,76 @@
             </div>
 
             <form class="login-form validate-form layui-form" >
-					<span class="login-form-title">
-						后台登录
-					</span>
+                <span class="login-form-title">
+                    后台登录
+                </span>
 
-                <div class="wrap-input validate-input">
-                    <input class="input layui-input" lay-verify="account" type="text" name="account" placeholder="账号">
-                    <span class="symbol-input">
-                        <i class="layui-icon layui-icon-username" aria-hidden="true"></i>
-                    </span>
+                <div class="layui-tab" lay-filter="test1">
+
+                    <div class="layui-tab-content">
+                        <div class="layui-tab-item layui-show">
+                            <div class="wrap-input validate-input">
+                                <input class="input layui-input" lay-verify="account" type="text" name="account"
+                                       placeholder="账号">
+                                <span class="symbol-input">
+                                    <i class="layui-icon layui-icon-username" aria-hidden="true"></i>
+                                </span>
+                            </div>
+
+                            <div class="wrap-input validate-input">
+                                <span class="pass-view">
+                                    <i ia-event="pass-view"
+                                       class="icon layui-icon layui-icon-extend-Notvisible1 password-view-icon"
+                                       aria-hidden="true"></i>
+                                </span>
+                                <span class="symbol-input">
+                                    <i class="layui-icon layui-icon-password" aria-hidden="true"></i>
+                                </span>
+                                <input class="input layui-input login-form-pass-input" type="password" name="password"
+                                       placeholder="密码">
+                            </div>
+
+                            <div class="wrap-input validate-input">
+                                <span class="symbol-input">
+                                    <i class="layui-icon layui-icon-vercode" aria-hidden="true"></i>
+                                </span>
+                                <span class="verify_code">
+                                    <img src="{:captcha_src()}" alt="">
+                                </span>
+                                <input class="input layui-input login-form-pass-input" type="text" name="verify"
+                                       placeholder="验证码">
+                            </div>
+                        </div>
+                        <div class="layui-tab-item">
+                            <div class="wrap-input validate-input">
+                                <input class="input layui-input" lay-verify="phone" type="text" name="phone"
+                                       placeholder="手机号">
+                                <span class="symbol-input">
+                                    <i class="layui-icon layui-icon-username" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                            <div class="wrap-input validate-input">
+                                <span class="symbol-input">
+                                    <i class="layui-icon layui-icon-vercode" aria-hidden="true"></i>
+                                </span>
+                                <span class="phone-verify-code" ia-event="send-verify-code">
+                                    发送验证码
+                                </span>
+                                <input class="input layui-input login-form-pass-input" type="text" name="verify"
+                                       placeholder="验证码">
+                            </div>
+                        </div>
+                    </div>
+
+                    <ul class="layui-tab-title">
+                        <li class="layui-this" lay-id="account" >
+                            <i class="layui-icon layui-icon-auz"></i>
+                        </li>
+                        <li lay-id="phone">
+                            <i class="layui-icon layui-icon-cellphone"></i>
+                        </li>
+                    </ul>
                 </div>
-
-                <div class="wrap-input validate-input">
-                    <span class="pass-view" >
-                        <i ia-event="pass-view" class="icon layui-icon layui-icon-extend-Notvisible1 password-view-icon" aria-hidden="true"></i>
-                    </span>
-                    <span class="symbol-input">
-                        <i class="layui-icon layui-icon-password" aria-hidden="true"></i>
-                    </span>
-                    <input class="input layui-input login-form-pass-input" type="password" name="password" placeholder="密码">
-
-                </div>
-
-                <div class="wrap-input validate-input">
-                    <span class="symbol-input">
-                        <i class="layui-icon layui-icon-vercode" aria-hidden="true"></i>
-                    </span>
-                    <span class="verify_code">
-                        <img src="{:captcha_src()}" alt="">
-                    </span>
-                    <input class="input layui-input login-form-pass-input" type="text" name="verify" placeholder="验证码">
-                </div>
-
                 <div class="container-login-form-btn">
                     <button class="login-form-btn" type="submit" lay-submit lay-filter="login-submit" ia-event="loading">
                         登陆
@@ -119,7 +157,7 @@
                 ,'密码必须6到12位，且不能出现空格'
             ]
         });
-
+        let isSend = false;
         $("[ia-event]").on('click',function (event) {
             let _this = $(this);
             let iaEvent = _this.attr('ia-event');
@@ -134,6 +172,26 @@
                     _this.removeClass('layui-icon-extend-browse');
                     _this.parent().parent().children('input').attr('type','password')
                 }
+            }
+            if (iaEvent === 'send-verify-code'){
+                console.log('发送验证码');
+                let count = 60;
+                console.log(isSend)
+                if (isSend){
+                    return;
+                }
+                _this.addClass('disabled');
+                isSend = true
+                let verifyCodeTimer = setInterval(function(){
+                    count--;
+                    _this.text(count+'s');
+                    if (count <=0) {
+                        isSend = false;
+                        _this.removeClass('disabled');
+                        clearInterval(verifyCodeTimer);
+                        _this.text('发送验证码');
+                    }
+                },1000);
             }
             // console.log(form.verify())
         })
