--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -474,3 +474,31 @@ span.verify_code > img{
     border-radius: 0 50px 50px 0;
     border-left: 1px solid red;
 }
+
+.login-form .layui-tab-title,.login-form ul.layui-tab-title li.layui-this:after{
+    border: none;
+    display: flex;
+    justify-content: center;
+}
+
+.login-form .layui-tab-content{
+    height: 200px;
+}
+
+.login-form .phone-verify-code{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40%;
+    line-height: 50px;
+    background-color: #001f97;
+    border-radius: 0 50px 50px 0;
+    text-align: center;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
+.login-form .phone-verify-code.disabled{
+    background-color: #001f9790;
+    cursor: not-allowed;
+}
