--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -502,3 +502,16 @@ span.verify_code > img{
     background-color: #001f9790;
     cursor: not-allowed;
 }
+
+.login-form ul.layui-tab-title li{
+    border-radius: 50%;
+    min-width: 40px;
+    padding: 0;
+    border: none;
+    margin: 0 12px;
+}
+
+.login-form ul.layui-tab-title li.layui-this{
+    background-color: #001f97;
+    color: #f2f2f2;
+}
