发送验证码倒计时

--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -181,6 +181,7 @@
                     return;
                 }
                 _this.addClass('disabled');
+                _this.text(count+'s');
                 isSend = true
                 let verifyCodeTimer = setInterval(function(){
                     count--;
