微信扫码登录示例

--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -84,6 +84,11 @@
                                        placeholder="验证码">
                             </div>
                         </div>
+                        <div class="layui-tab-item">
+                            <div class="wechat-qrcode qrcode">
+                                <img src="/static/admin/images/wechat-login-demo.png" alt="">
+                            </div>
+                        </div>
                     </div>
 
                     <ul class="layui-tab-title">
@@ -92,6 +97,9 @@
                         </li>
                         <li lay-id="phone">
                             <i class="layui-icon layui-icon-cellphone"></i>
+                        </li>
+                        <li lay-id="phone">
+                            <i class="layui-icon layui-icon-login-wechat"></i>
                         </li>
                     </ul>
                 </div>
