--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -471,7 +471,7 @@ span.verify_code > img{
     max-width: 100%;
     height: 48px;
     border-radius: 0 50px 50px 0;
-    border-left: 1px solid #001f9790;
+    /*border-left: 1px solid #001f9790;*/
 }
 
 .login-form .layui-tab-title,.login-form ul.layui-tab-title li.layui-this:after{
@@ -481,7 +481,7 @@ span.verify_code > img{
 }
 
 .login-form .layui-tab-content{
-    height: 200px;
+    height: 230px;
 }
 
 .login-form .phone-verify-code{
@@ -525,3 +525,5 @@ span.verify_code > img{
 .login-form .qrcode img{
     width: 175px;
 }
+
+/*.login-form .verify_code span.verify_code > img*/
