表单/loading组件修改

--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -88,6 +88,9 @@
                             <div class="wechat-qrcode qrcode">
                                 <img src="/static/admin/images/wechat-login-demo.png" alt="">
                             </div>
+                            <div class="refresh-action">
+                                <p>请使用微信扫码登录 <span>刷新 <i class="layui-icon layui-icon-refresh"></i></span></p>
+                            </div>
                         </div>
                     </div>
 
