# 登录页面修改

--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -159,7 +159,7 @@
             },1500)
             // page_loading.fadeIn(500);
             // setTimeout(function () {
-            //     location.href = "/admin";
+            //     location.href = "/administrator";
             // },1000)
             return false;
         });
