--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -236,7 +236,7 @@
             //     page_loading.fadeIn(500);
             //
             //     // setTimeout(function () {
-            //     //     location.href = "/admin";
+            //     //     location.href = "/administrator";
             //     // },1000)
             },1500)
 
@@ -256,7 +256,7 @@
 
             // page_loading.fadeIn(500);
             // setTimeout(function () {
-            //     location.href = "/admin";
+            //     location.href = "/administrator";
             // },1000)
             return false;
         });
