--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -371,14 +371,26 @@ ul.layui-nav a{
     user-select: none;
     touch-action: manipulation;
     border: 1px solid;
-    color: var(--td-bg-color-specialcomponent);
+
+    background-color: var(--td-bg-color-component);
+    color: var(--td-text-color-primary);
+    border-color: var(--td-bg-color-component);
+}
+
+.layui-btn:hover{
+    background-color: var(--td-bg-color-component-hover);
+}
+
+.layui-btn-primary{
+    color: var(--td-text-color-anti);
     background-color: var(--td-brand-color);
     border-color: var(--td-brand-color);
 }
 
-.layui-btn-primary{
-    color: var(--td-text-color-primary);
-    background-color: var(--td-bg-color-specialcomponent);
+.layui-btn-primary:hover{
+    background-color: var(--td-brand-color-hover);
+    color: var(--td-text-color-anti);
+    border-color: var(--td-brand-color-hover);
 }
 
 .layui-btn-normal{
@@ -1106,3 +1118,22 @@ div.layui-layer.layui-layer-msg{
     border: none;
     box-shadow: 1px 1px 5px 0px #00000029;
 }
+
+/* popup 表单按钮组 start */
+.bottom{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    line-height: 50px;
+    background-color: #F8F8F8;
+    border-top: 1px solid #eee;
+}
+
+.button-container{
+    position: absolute;
+    right: 15px;
+}
+
+/* popup 表单按钮组 end */
