--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -38,11 +38,11 @@
 </script>
 
 <script type="text/html" id="power-type">
-    {{#if (d.powerType == '0') { }}
+    {{#if (d.type == '0') { }}
     <span>目录</span>
-    {{# }else if(d.powerType == '1'){ }}
+    {{# }else if(d.type == '1'){ }}
     <span>菜单</span>
-    {{# }else if(d.powerType == '2'){ }}
+    {{# }else if(d.type == '2'){ }}
     <span>按钮</span>
     {{# } }}
 </script>
@@ -68,23 +68,34 @@
 
         let MODULE_PATH = "../system/operate/";
 
+        //弹出窗设置 自己设置弹出百分比
+        function screen() {
+            if (typeof width !== 'number' || width === 0) {
+                width = $(window).width() * 0.8;
+            }
+            if (typeof height !== 'number' || height === 0) {
+                height = $(window).height() * 0.8;
+            }
+            return [width + 'px', height + 'px'];
+        }
+
         treetable.render({
             treeColIndex: 1,
             treeSpid: 0,
-            treeIdName: 'powerId',
-            treePidName: 'parentId',
+            treeIdName: 'id',
+            treePidName: 'pid',
             skin:'line',
             treeDefaultClose: true,
             toolbar:'#power-toolbar',
             elem: '#power-table',
-            url: '/demo/table/power.json',
+            url: '{:url("getList")}',
             page: false,
             cols: [
                 [
                     {type: 'checkbox'},
-                    {field: 'powerName', minWidth: 200, title: '权限名称'},
+                    {field: 'title', minWidth: 200, title: '权限名称'},
                     {field: 'icon', title: '图标',templet:'#icon'},
-                    {field: 'powerType', title: '权限类型',templet:'#power-type'},
+                    {field: 'type', title: '权限类型',templet:'#power-type'},
                     {field: 'enable', title: '是否可用',templet:'#power-enable'},
                     {field: 'sort', title: '排序'},
                     {title: '操作',templet: '#power-bar', width: 150, align: 'center'}
@@ -127,10 +138,12 @@
                 type: 2,
                 title: '新增',
                 shade: 0.1,
-                area: ['450px', '500px'],
-                content: MODULE_PATH + 'add.html'
+                area: screen(),
+                content: '{:url("add")}'
             });
         }
+
+        console.log( screen())
 
         window.edit = function(obj){
             layer.open({
