# 权限列表及新增权限页面

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -59,11 +59,11 @@
         </div>
         <div class="bottom">
             <div class="button-container">
-                <button type="submit" class="layui-btn layui-btn-normal " lay-submit="" lay-filter="save">
+                <button type="submit" class="layui-btn layui-btn-primary " lay-submit="" lay-filter="save">
                     <i class="layui-icon layui-icon-ok"></i>
                     提交
                 </button>
-                <button type="reset" class="layui-btn layui-btn-primary ">
+                <button type="reset" class="layui-btn  ">
                     <i class="layui-icon layui-icon-refresh"></i>
                     重置
                 </button>
