--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -3,7 +3,7 @@
 {block name="body"}
 <body>
 
-<div>
+<div class="popup-contain">
     <form class="layui-form" action="">
         <div class="layui-form-item">
             <label for="" class="layui-form-label">父级</label>
@@ -40,7 +40,7 @@
                     <input type="text" id="iconPicker2" name="icon" value="layui-icon-face-smile" lay-filter="iconPicker2" class="hide">
                 </div>
                 <div class="layui-input-inline" style="width: unset">
-                    <span class="pear-btn" id="clear">清空</span>
+                    <span class="layui-btn" id="clear">清空</span>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
         <div class="layui-form-item">
             <label for="" class="layui-form-label">排序</label>
             <div class="layui-input-block">
-                <input type="number" name="sort" value="10" lay-verify="required" placeholder="排序权重" class="layui-input" >
+                <input type="number" step="1" min="0" name="sort" value="10" lay-verify="required" placeholder="排序权重" class="layui-input" >
             </div>
         </div>
         <div class="bottom">
@@ -72,24 +72,132 @@
 </div>
 
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
-<script src="/static/admin/layui/layui.all.js"></script>
+<script src="/static/admin/layui/layui.js"></script>
 <script src="/static/admin/config.js"></script>
 <script>
     layui.use(['form','element','icon','jquery','request'],function () {
         let icon= layui.icon;
         let $ = layui.jquery;
+        let form = layui.form;
         icon.render({
             elem: '#iconPicker2',
             style: 'color: #5FB878;'
             ,placeholder: ''
             ,isSplit: true
             ,page: false
-            ,search: false
+            ,search: true
             ,click: function (data) {
             },
             ready: function(d) {
             }
         });
+
+        function initNumberInput(){
+
+            //乘法
+            function mul(a, b) {
+                var c = 0,
+                    d = a.toString(),
+                    e = b.toString();
+                try {
+                    c += d.split(".")[1].length;
+                } catch(f) {}
+                try {
+                    c += e.split(".")[1].length;
+                } catch(f) {}
+                return Number(d.replace(".", "")) * Number(e.replace(".", "")) / Math.pow(10, c);
+            }
+//除法
+            function div(a, b) {
+                var c, d, e = 0,
+                    f = 0;
+                try {
+                    e = a.toString().split(".")[1].length;
+                } catch(g) {}
+                try {
+                    f = b.toString().split(".")[1].length;
+                } catch(g) {}
+                return c = Number(a.toString().replace(".", "")), d = Number(b.toString().replace(".", "")), mul(c / d, Math.pow(10, f - e));
+            }
+
+            function add(a, b) {
+                var c, d, e;
+                try {
+                    c = a.toString().split(".")[1].length;
+                } catch(f) {
+                    c = 0;
+                }
+                try {
+                    d = b.toString().split(".")[1].length;
+                } catch(f) {
+                    d = 0;
+                }
+                return e = Math.pow(10, Math.max(c, d)), (mul(a, e) + mul(b, e)) / e;
+            }
+//减法
+            function sub(a, b) {
+                var c, d, e;
+                try {
+                    c = a.toString().split(".")[1].length;
+                } catch(f) {
+                    c = 0;
+                }
+                try {
+                    d = b.toString().split(".")[1].length;
+                } catch(f) {
+                    d = 0;
+                }
+                return e = Math.pow(10, Math.max(c, d)), (mul(a, e) - mul(b, e)) / e;
+            }
+            $("input[type=number]").each(function (el) {
+                let html = '<div class="layui-inline number-input">';
+                html += '<span class="layui-btn minus-btn layui-btn-primary"><i class="layui-icon layui-icon-subtraction"></i></span>'
+                html += $(this).prop("outerHTML");
+                html += '<span class="layui-btn plus-btn layui-btn-primary"><i class="layui-icon layui-icon-add-1"></i></span>'
+                html += '</div>';
+                $(this).replaceWith(html)
+
+            });
+            $('span.plus-btn').on('click',function (el) {
+                let numberInput = $(this).parent().find('input');
+                let step = numberInput.attr('step')
+                let max = numberInput.attr('max')
+                if (step === undefined){
+                    step = 1;
+                }
+                if (max !== undefined && add(numberInput.val(),step) > max){
+                    return;
+                }
+                numberInput.val(add(numberInput.val(),step));
+            })
+            $('span.minus-btn').on('click',function (el) {
+                let numberInput = $(this).parent().find('input');
+                let step = numberInput.attr('step')
+                let min =  numberInput.attr('min')
+                if (step === undefined){
+                    step = 1;
+                }
+                if (min !== undefined && sub(numberInput.val(),step) < min){
+                    return;
+                }
+                numberInput.val(sub(numberInput.val(),step));
+
+            })
+            // console.log(numberInputList)
+            // for (let i = 0;i<numberInputList.length;i++){
+            //     let html = '<div class="">';
+            //     console.log($(numberInputList[i]))
+            //     html += $(numberInputList).html();
+            //     html += '</div>';
+            //     console.log(html)
+            // }
+
+        }
+
+        initNumberInput()
+
+
+
         $('#clear').click(function() {
             $('#iconPicker2').attr("value","");
             $('#iconPicker2').attr("title","");
