--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -425,8 +425,8 @@ ul.layui-nav a{
 .layui-btn-sm{
     height: 24px;
     font-size: 12px;
-    padding-left: 7px;
-    padding-right: 7px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 .layui-btn-xs{
     height: 20px;
@@ -1142,3 +1142,25 @@ div.layui-layer.layui-layer-msg{
 }
 
 /* popup 表单按钮组 end */
+
+.number-input{
+    display: flex;
+    max-width: 215px;
+}
+
+.number-input .plus-btn{
+    border-radius: 0 5px 5px 0;
+}
+.number-input .minus-btn{
+    border-radius: 5px 0 0 5px;
+}
+
+.number-input input{
+    -moz-appearance:textfield;
+    border-radius: 0;
+    text-align: center;
+    border-color: var(--td-brand-color);
+}
+.number-input input::-webkit-outer-spin-button {
+    -webkit-appearance: none;	/* 有无看不出差别 */
+}
